# ChangeLog for dev-util/global
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.72 2010/12/13 20:41:22 arfrever Exp $

  13 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -global-5.9.ebuild, -global-5.9.1.ebuild:
  Delete.

  13 Dec 2010; Brent Baude <ranger@gentoo.org> global-5.9.2-r2.ebuild:
  stable ppc, bug 341311

  20 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  global-5.9.2-r2.ebuild:
  stable x86, bug 341311

  16 Oct 2010; Markos Chandras <hwoarang@gentoo.org> global-5.9.2-r2.ebuild:
  Stable on amd64 wrt bug #341311

  10 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  metadata.xml:
  Restore previous maintainer.

*global-5.9.2-r2 (10 Sep 2010)

  10 Sep 2010; Jeroen Roovers <jer@gentoo.org> -global-5.9.2-r1.ebuild,
  +global-5.9.2-r2.ebuild:
  Set SITELISP through configure by Ulrich Müller (bug #336727).

*global-5.9.2-r1 (02 Sep 2010)

  02 Sep 2010; Jeroen Roovers <jer@gentoo.org> -global-5.9.2.ebuild,
  +global-5.9.2-r1.ebuild, files/global-5.9.2-localstatedir.patch:
  Fix bad patch after upstream review.

  01 Sep 2010; Jeroen Roovers <jer@gentoo.org> -global-5.8.2.ebuild,
  global-5.9.1.ebuild, global-5.9.2.ebuild:
  Install site file into correct location (bug #285600).

*global-5.9.2 (01 Sep 2010)

  01 Sep 2010; Jeroen Roovers <jer@gentoo.org> +global-5.9.2.ebuild,
  +files/global-5.9.2-localstatedir.patch:
  Version bump.

  19 Aug 2010; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove arfrever.

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> global-5.9.ebuild:
  Marked ppc stable for bug #327481.

*global-5.9.1 (19 Jul 2010)

  19 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +global-5.9.1.ebuild:
  Version bump.

  12 Jul 2010; Christian Faulhammer <fauli@gentoo.org> global-5.9.ebuild:
  stable x86, bug 327481
