@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/global
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.72 2010/12/13 20:41:22 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.73 2010/12/15 14:47:18 arfrever Exp $
+
+*global-5.9.3 (15 Dec 2010)
+
+  15 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +global-5.9.3.ebuild:
+  Version bump.
 
   13 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   -global-5.9.ebuild, -global-5.9.1.ebuild:
